--- a/META.yml
+++ b/META.yml
@@ -25,19 +25,23 @@ no_index:
     - inc
     - t
     - xt
+recommends:
+  Moose: 0
 requires:
+  Any::Moose: 0.04
   Carp: 0
   Crypt::SSLeay: 0
+  Digest::SHA1: 0
   LWP::UserAgent: 0
   Lingua::EN::Inflect::Number: 0
-  Moose: 0.34
-  MooseX::Role::Parameterized: 0
+  Mouse: 0
   Net::Google::AuthSub: 0
+  Net::OAuth: 0
   URI: 0
   XML::Atom: 0
-  namespace::clean: 0
+  namespace::autoclean: 0
   perl: 5.8.1
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/lopnor/Net-Google-DataAPI.git
-version: 0.06
+version: 0.07
