--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
 abstract: 'Base implementations for modules to negotiate with Google Data APIs'
 author:
-  - 'Nobuo Danjou <nobuo.danjou@gmail.com>'
+  - 'Nobuo Danjou <danjou@soffritto.org>'
 build_requires:
   ExtUtils::MakeMaker: 6.59
   Test::Exception: 0
@@ -46,4 +46,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/lopnor/Net-Google-DataAPI.git
-version: 0.26_1
+version: 0.26_2
