--- a/META.yml
+++ b/META.yml
@@ -38,12 +38,13 @@ requires:
   Mouse: 0.51
   Net::Google::AuthSub: 0.5
   Net::OAuth: 0
-  Net::OAuth2: 0.07
+  Net::OAuth2: 0.51
   Text::Glob: 0
   URI: 0
   XML::Atom: 0
+  XML::LibXML: 0
   perl: 5.8.1
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/lopnor/Net-Google-DataAPI.git
-version: 0.2802
+version: 0.2802_1
