Import of DANJOU/Net-Google-DataAPI-0.2803 from CPAN.
gitpan-cpan-distribution: Net-Google-DataAPI
gitpan-cpan-version:      0.2803
gitpan-cpan-path:         DANJOU/Net-Google-DataAPI-0.2803.tar.gz
gitpan-cpan-author:       DANJOU
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -47,4 +47,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/lopnor/Net-Google-DataAPI.git
-version: 0.2802_2
+version: 0.2803
